--- a/marlowe-tutorial/doc/introducing-marlowe.adoc
+++ b/marlowe-tutorial/doc/introducing-marlowe.adoc
@@ -8,7 +8,7 @@ blockchain context.
 
 === Programming Languages and Domain-Specific Languages
 
-The first computers were programmed in ``machine code''. Each kind of
+The first computers were programmed in “machine code”. Each kind of
 system had a different code, and these codes were low-level and
 inexpressive: programs were long sequences of very simple instructions,
 incomprehensible to anyone who had not written them. Nowadays we are
@@ -33,9 +33,7 @@ written, by designing those possibilities out of the language. By doing
 this we can aim to avoid some of the unanticipated exploits which have
 been a problem for existing blockchains.
 * We can also more easily check that programs have the properties that
-we want: for example, in the case of a financial contract, we might want
-to make sure that the contract can never fail to make a payment that it
-should.
+we want: for example, in the case of a Marlowe contract, we can make sure that the contract will never fail to make a payment that it should.
 * Because it is a DSL, we can build special-purpose tools to help people
 write programs in the language. In the case of Marlowe we can emulate
 how a contract will behave before it is run for real on the blockchain;
@@ -44,7 +42,7 @@ what it is intended to.
 
 Marlowe is also an _embedded_ DSL, hosted in the
 https://www.haskell.org[Haskell] programming language. While it is
-possible to use ``pure'' Marlowe if we wish, being embedded in a
+possible to use “pure” Marlowe if we wish, being embedded in a
 general-purpose language allows contract writers to selectively exploit
 features of Haskell in writing Marlowe contracts, making them easier to
 read, supporting re-use and so forth.
@@ -57,15 +55,14 @@ contract software in the financial sector. In developing Marlowe, we
 have adapted these languages to work on blockchain. Marlowe is
 implemented on the settlement layer (SL) of the Cardano blockchain, but
 could equally well be implemented on Ethereum/Solidity or other
-blockchain platforms; in this respect it is ``platform agnostic'' just
+blockchain platforms; in this respect it is “platform agnostic” just
 like modern programming languages like Java and C++. The Marlowe
-Playground online emulator tool allows you to experiment with, develop
-and interact with Marlowe contracts in your web browser, without having
+Playground online emulator tool allows you to experiment with, develop, simulate and analyse Marlowe contracts in your web browser, without having
 to install any software.
 
 What does a Marlowe contract look like? It is built by combining a small
 number of building blocks that describe making a payment, making an
-observation of something in the ``real world'', waiting until a certain
+observation of something in the “real world”, waiting until a certain
 condition becomes true, and so on.
 
 === Timeouts, deposits and commitments
@@ -79,19 +76,19 @@ happen_”. We do this using *timeouts*.
 
 A contract can ask a participant to make a *deposit* of some funds, but obviously the contract cannot actually force a participant to make a deposit. Instead, the contract can wait for a period of time for the participant to commit to the contract: when that period of time expires, the contract moves on to follow some alternative instructions. This prevents a participant stopping a contract by not taking part, thus making sure that “things happen”.
 
-All the constructs of Marlowe that require user participation – including user deposits and user choices – are protected by timeouts. Because of this, it is easy to see that the *commitment* made by a participant to a contract is _finite_: we can predict when the contract will have nothing left to do: at this point any unspent funds are refunded to participants, and the contract stops, or _terminates_. So, any funds put into the contract by a participant _can't be locked up forever_: at this point the commitment effectively ends. 
+All the constructs of Marlowe that require user participation – including user deposits and user choices – are protected by timeouts. Because of this, it is easy to see that the *commitment* made by a participant to a contract is _finite_: we can predict when the contract will have nothing left to do – when it can be closed – at this point any unspent funds left in the contract are *refunded* to participants, and the contract stops, or _terminates_. So, any funds put into the contract by a participant _can't be locked up forever_: at this point the commitment effectively ends. 
 
-What is more, it is easy for us to _read off_ from the contract when it will terminate, and so all participants will know this before taking part in the contract,
+What is more, it is easy for us to _read off_ from the contract when it will terminate, we call this the _lifetime_ of the contract: all participants will therefore be able to find out this lifetime before taking part in the contract,
 
 In our model, a running contract cannot force a deposit or a choice
 to happen: all it can do is to request a deposit or choice from a participant. In other words, for these actions it cannot
-“__push__”, but it can “__pull__”. On the other hand, it _can_ make payments automatically, so some aspects of a Marlowe contract can “push”to make some things happen, e.g. ensuring that a payment is made to a participant by constructing an appropriate transaction output.
+“__push__”, but it can “__pull__”. On the other hand, it _can_ make payments automatically, so some aspects of a Marlowe contract can “push” to make some things happen, e.g. ensuring that a payment is made to a participant by constructing an appropriate transaction output.
 
 
 === Marlowe in action
 
 We are working on a production release of Marlowe on the Cardano
-blockchain later in 2019 / early 2020. From today, you are able to explore
+blockchain early in 2020. From today, you are able to explore
 Marlowe for yourself, either by downloading it and using the Haskell
 implementation directly, or by using the online Marlowe Playground
 simulation tool; these are both covered in subsequent tutorials. These
