Add a note about nested FSFs

--- a/extended-utxo-spec/extended-utxo-specification.tex
+++ b/extended-utxo-spec/extended-utxo-specification.tex
@@ -820,6 +820,9 @@ being non-negative.  The \qtymappm{} type is similar, but
 negative quantities are allowed.  As with \qty{} and \qtypm{}, we regard
 \qtymap{} as a subtype of \qtymappm{} and convert freely between them.
 
+\qtymap{} is a finitely-supported function \emph{to} another finitely-supported
+function. This is well-defined, since finitely-supported functions form a monoid.
+
 \begin{ruledfigure}{H}
   \[
   \begin{arraydefs}{rll}
