added DOIs of published papers to references in other papers and the top-level README

--- a/papers/system-f-in-agda/bibliography.bib
+++ b/papers/system-f-in-agda/bibliography.bib
@@ -53,6 +53,7 @@ editor = {C., Schürmann}
                   13th International Conference (MPC 2019)},
   editor = {Graham Hutton},
   year = {2019},
+  doi = {10.1007/978-3-030-33636-3\_15}
 }
 
 @inproceedings{hirai,
