--- a/papers/unraveling-recursion/references.bib
+++ b/papers/unraveling-recursion/references.bib
@@ -604,6 +604,6 @@
   author={Chapman, James and Kireev, Roman and Nester, Chad and Wadler, Philip},
   booktitle={Mathematics of Program Construction. LNCS},
   year={2019},
-  notes={in press}
+  doi = {10.1007/978-3-030-33636-3\_15}
 }
 
