ledger: purge '*Of' types
The general goal of being agnostic to the hash type is good, but it's
easy enough to put back in if we need us and it's not buying us anything
currently.

Already discussed this with Jann.

--- a/plutus-book/doc/auction/english.adoc
+++ b/plutus-book/doc/auction/english.adoc
@@ -40,7 +40,7 @@ type Admin = (TxHash, Integer)
 -- Convert the reference to an output to a hash-index
 -- pair.
 mkAdmin :: TxOutRef -> Admin
-mkAdmin (TxOutRefOf h i) = (plcTxHash h, i)
+mkAdmin (TxOutRef h i) = (plcTxHash h, i)
 
 -- We need no data in data- and redeemer-scripts,
 -- so both can be of unit type.
